examples/test/testpolicy2708.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2708
  namespace: namespace436
spec:
  podSelector:
    matchLabels:
      key38: value20
      key22: value26
      key37: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value6
          key23: value40
          key1: value3
      podSelector:
        matchLabels:
          key27: value26
